Freedom Sanbox Ant Deploy/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AP_D__c</fullName>
        <formula>IF( ISNULL(Action_Plan_Generation_Date__c) , (TODAY() - Plan_Approved_Date__c ),(Action_Plan_Generation_Date__c-Plan_Approved_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Plan Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARPP_Generated__c</fullName>
        <formula>Total_Booked_Revenue__c  +  Expected_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARPP Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActionPlanActivatedDate__c</fullName>
        <label>Action Plan Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActionPlanGenerationDate__c</fullName>
        <label>Action Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActionPlanSharingDate__c</fullName>
        <label>Action Plan Sharing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Generation_Date__c</fullName>
        <label>Action Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_RPP_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Actual Amount</description>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Trail_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Actual Trail commission</description>
        <label>Actual Trail Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Upfront_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Actual commission for an entity</description>
        <label>Actual Upfront Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Factor__c</fullName>
        <label>Adjustment Factor %</label>
        <picklist>
            <picklistValues>
                <fullName>-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <defaultValue>00</defaultValue>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Received__c</fullName>
        <label>Agreement Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Structure__c</fullName>
        <label>Agreement Structure</label>
        <picklist>
            <picklistValues>
                <fullName>2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_E_Mail_Address__c</fullName>
        <label>Alternate E-Mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Mobile__c</fullName>
        <label>Alternate Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amount_2nd_Installment__c</fullName>
        <label>Amount - 2nd Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount - 1st Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anniversary__c</fullName>
        <formula>DATE( YEAR(  TODAY()  ) , MONTH( Marriage_Date__c ) , DAY( Marriage_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>(Expected_Amount__c - Amount_Received__c  -  Amount_2nd_Installment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank2_Account_Types__c</fullName>
        <label>Bank2 Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_2_Name__c</fullName>
        <label>Bank 2 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number2__c</fullName>
        <label>Bank2 Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch2Details__c</fullName>
        <label>Branch 2 Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_details__c</fullName>
        <label>Branch Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Cash_Equivalents__c</fullName>
        <label>Cash/Cash Equivalents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Client Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturers Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturers Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturers General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Manager1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Manager of the partner portal account</description>
        <label>Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheque_Credited__c</fullName>
        <label>Cheque Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonoured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheque_Received_Date_2__c</fullName>
        <label>Cheque Received Date - 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Received_Date__c</fullName>
        <label>Cheque Received Date - 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_date__c</fullName>
        <label>Cheque date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Christmas_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Christmas Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Category__c</fullName>
        <label>Client Category</label>
        <picklist>
            <picklistValues>
                <fullName>WOW</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>BAW</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Client Code</description>
        <inlineHelpText>Kindly Enter numeric value</inlineHelpText>
        <label>Client Code</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Date_Original__c</fullName>
        <label>Contract Date (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_date_Month__c</fullName>
        <formula>CASE( MONTH ( DATEVALUE( CreatedDate ) ) , 
1, &quot;January &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
2, &quot;Febuary &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
3, &quot;March &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
4, &quot;April &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
5, &quot;May &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
6, &quot;June &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
7, &quot;July &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
8, &quot;August &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
9, &quot;September &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
10, &quot;October &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
11, &quot;November &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ), 
&quot;December &quot; + TEXT ( YEAR ( DATEVALUE( CreatedDate ) ) ) )</formula>
        <label>Created date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical_Notes__c</fullName>
        <label>Critical Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CrossSell_Upsell_Date__c</fullName>
        <label>CrossSell/Upsell Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CrossSell_Upsell_Opp_Sniezed__c</fullName>
        <label>CrossSell/Upsell Opp Sniezed</label>
        <picklist>
            <picklistValues>
                <fullName>Comprehensive FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive FP+SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Goal Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Filing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <label>Current Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_CR__c</fullName>
        <formula>IF( ISNULL( Data_Collection_Date__c ) , ((TODAY() -Cheque_Received_Date__c)),((Data_Collection_Date__c - DATEVALUE(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Collection Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DP_Id__c</fullName>
        <label>DP Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCollectionDate__c</fullName>
        <label>Data Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Completion_Reject_Reason__c</fullName>
        <label>Data Collection Completion Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Date__c</fullName>
        <label>Data Collection Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Debt</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Estimated_Life_Expectancy__c</fullName>
        <label>Default Estimated Life Expectancy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Retirement_Age__c</fullName>
        <label>Default Retirement Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demat_Account_Name__c</fullName>
        <label>Demat Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demat_Account_Number__c</fullName>
        <label>Demat Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demat_Branch_Name__c</fullName>
        <label>Demat Branch Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinuation_SMS_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discontinuation SMS Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earning_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earning Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Temp__c</fullName>
        <label>Email Temp</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employment_Information_del__c</fullName>
        <label>Employment Information</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay at home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_model__c</fullName>
        <label>Engagement model</label>
        <picklist>
            <picklistValues>
                <fullName>Warrior [Execute On US - subbroker]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fighter [Execute Not On Us - IFA]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Intereseted_in_FP_Status__c</fullName>
        <label>Entity Intereseted in FP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested in FP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Stage__c</fullName>
        <label>Entity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Data Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Plan Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution in Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Status__c</fullName>
        <label>Entity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathfinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equity__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Equity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Life_EndYear__c</fullName>
        <label>Estimated Life EndYear</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Life_Expectancy__c</fullName>
        <label>Estimated Life Expectancy</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionTrackerOpenedDate__c</fullName>
        <label>Execution Tracker Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Completion_Dates__c</fullName>
        <label>Execution Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Description__c</fullName>
        <label>Execution Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Duration__c</fullName>
        <formula>IF( ISNULL(  Execution_Completion_Dates__c  ) , (TODAY() - First_Execution_Completion_Date__c),(Execution_Completion_Dates__c -First_Execution_Completion_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execution Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedFinancialPlanGenerationDate__c</fullName>
        <label>Expected Financial Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <formula>IF(ISBLANK( TDS__c ),
(IF(ISPICKVAL( Agreement_Structure__c ,&quot;2,500&quot; ),
2500*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;5,000&quot; ),
5000*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;7,500&quot; ),
7500*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;10,000&quot; ),
10000*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;12,500&quot; ),
12500*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;15,000&quot; ),
15000*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;25,000&quot; ),
25000*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;35,000&quot; ),
35000*((100- Discount__c  )/100)*1.103,
IF(ISPICKVAL( Agreement_Structure__c ,&quot;30,000&quot; ),
30000*((100- Discount__c  )/100)*1.103,NULL)))))))))),
(IF(ISPICKVAL( Agreement_Structure__c ,&quot;15,000&quot; ),
15000*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;2,500&quot; ),
2500*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;5,000&quot; ),
5000*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;7,500&quot; ),
7500*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;10,000&quot; ),
10000*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;12,500&quot; ),
12500*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;25,000&quot; ),
25000*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;35,000&quot; ),
35000*((100- Discount__c  )/100)*1.103*(1-TDS__c),
IF(ISPICKVAL( Agreement_Structure__c ,&quot;30,000&quot; ),
30000*((100- Discount__c  )/100)*1.103*(1-TDS__c),NULL))))))))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_RPP_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>RPP total Expected Amount for an entity</description>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Return_on_Investment__c</fullName>
        <label>Expected Return on Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Trail_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Expected Trail Commisson</description>
        <label>Expected Trail Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Upfront_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>total Expected Upfront commission</description>
        <label>Expected Upfront Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FE_CD__c</fullName>
        <formula>IF( ISNULL( First_Execution_Completion_Date__c) , (TODAY() - Action_Plan_Generation_Date__c),(First_Execution_Completion_Date__c-Action_Plan_Generation_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Execution Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPA_Allocated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPA Allocated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPA_Allocated_Date__c</fullName>
        <label>FPA Allocated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FPA_Old_Value_For_Approval__c</fullName>
        <label>FPA Old Value For Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPA_Old_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPA Old Value</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (FPA Old Value)</relationshipLabel>
        <relationshipName>FPA_Old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPA_Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FPA (Financial Planning &amp; Advisory)</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts(FPA)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Picture__c</fullName>
        <description>To display Family Picture on Financial Plan</description>
        <label>Family Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Kit_Given__c</fullName>
        <label>Ffreedom Kit Given</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ffreedom_Score__c</fullName>
        <label>Financial X-Ray Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finametrica_Score__c</fullName>
        <label>Finametrica Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinancialPlanCompletionDate__c</fullName>
        <label>Financial Plan Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialPlanGenerationDate__c</fullName>
        <label>Financial Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Execution_Completion_Date__c</fullName>
        <label>First Execution Completion Date</label>
        <type>Date</type>
    </fields>
</CustomObject>